# kafka-publisher

./: .python-version  Makefile  publisher.py  pyproject.toml
