[tool.poetry]
name = "kafka-publish"
version = "0.1.0"
description = ""
authors = ["Tamer Cuba <tamercuba@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
